--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,13 @@ php:
 # See: http://docs.travis-ci.com/user/workers/container-based-infrastructure/
 sudo: false
 
+before_script:
+    - wget https://github.com/infection/infection/releases/download/0.14.1/infection.phar
+    - wget https://github.com/infection/infection/releases/download/0.14.1/infection.phar.asc
+    - gpg --keyserver hkps.pool.sks-keyservers.net --recv-keys 493B4AA0
+    - gpg --with-fingerprint --verify infection.phar.asc infection.phar
+    - chmod +x infection.phar
+
 before_install:
   - travis_retry composer self-update --no-interaction
 
@@ -23,6 +30,7 @@ install:
 script:
   - composer check-style
   - composer test-ci
+  - ./infection.phar --min-msi=48 --min-covered-msi=70 --threads=4
 
 after_success:
   - wget https://scrutinizer-ci.com/ocular.phar
