--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         }
     ],
     "require": {
-        "php": ">=7.4"
+        "php": ">=7.4",
+        "composer/composer": "^1.9"
     },
     "require-dev": {
         "phpunit/phpunit": "^8",
